fix layout issue

--- a/frontend/src/styles/components/button.css
+++ b/frontend/src/styles/components/button.css
@@ -6,6 +6,7 @@
   text-align: center;
   transition: 0.3s;
   cursor: pointer;
+  justify-content: center;
 }
 
 .defaultButton {
