--- a/frontend/src/styles/components/cards/card.css
+++ b/frontend/src/styles/components/cards/card.css
@@ -19,7 +19,7 @@
 
 .publicationCard {
   padding: 16px;
-  max-width: 370px;
+  max-width: 390px;
   background-color: var(--secondaryWhiteColor);
   border-radius: 5px;
   flex: 1 1 auto;
